--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "sortablejs": "^1.4.2",
     "underscore": "^1.8.3",
     "vue": "^1.0.21",
+    "vue-bracket": "^0.0.5",
     "vue-router": "^0.7.13",
     "vue-weui": "^0.3.2",
     "vuex": "^1.0.0-rc.2",
