--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "leancloud-storage": "^1.2.1",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
+    "lodash": "^4.14.0",
     "mint-ui": "^0.1.21",
     "sortablejs": "^1.4.2",
     "underscore": "^1.8.3",
